--- a/layout/Dialog.ui
+++ b/layout/Dialog.ui
@@ -38,6 +38,12 @@
         <height>60</height>
        </size>
       </property>
+      <property name="maximumSize">
+       <size>
+        <width>80</width>
+        <height>90</height>
+       </size>
+      </property>
       <property name="styleSheet">
        <string notr="true">background-image: url(:/dialog/estoque/Alert.png);
 background-position:center;
@@ -58,7 +64,7 @@ background-repeat: no-repeat;</string>
        </font>
       </property>
       <property name="text">
-       <string>henrique henrique henrique henrique henrique henrioque henrique </string>
+       <string>CHAVE NÃO CADASTRADA</string>
       </property>
       <property name="scaledContents">
        <bool>false</bool>
